# macime

./: .gitignore  .gitlab_ci.yml  .travis.yml  Dockerfile  README.md  cc.yaml  dodo.py  doit-db.json  pyproject.toml  pytest.ini  requirements.txt
.circleci/: config.yml  docker.yml
.github/workflows/: ci.yml  docker.yml  gcr.yml  lint.yml  main.yml  readme.yml  send_readme.yml
api/: server.py
docs/: ci.md  docker.md  gestionTests.md  microservicios.md  primerosPasos.md  tests.md
documentacionAdicional/: gestionTests.md  infoProyecto.md  primerosPasos.md
macime/: coche.py  gasolinera.py  key.json  localizacion.py  utils.py
macime/data/: glp.json  gnc.json
src/: coche.py  gasolinera.py  localizacion.py  principal.py  usuario.py
src/tests/: tests.py
test/: conftest.py  tests.py  tests_api.py
tests/: tests.py
