[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "macime"
version = "1.4.0"
description = "Proyecto universitario de la asignatura de Cloud Computing" 
authors = ["Jorge Prieto <jorgeprg@correo.ugr.es>"]


[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2"
doit = "^0.33"
requests = "^2.26"
black = "^21.11b1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rfEs -vv"
testpaths = [
    "test",
]
python_files = [
    "test*.py",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

